# generator-scrapy

./: README.md  gx.go  package-lock.json  package.json
__tests__/: app.js
generators/activerecord/: index.js
generators/activerecord/templates/: db.mongo.py  db.py  loaders.py  pipelines.sample.py
generators/activerecord/templates/migrations/: 2022_01_24_092442_create_entries_table.py
generators/activerecord/templates/models/: abstract_model.py  base_model.py  book.py  entry.py
generators/activerecord/templates/orator/: db.py
generators/activerecord/templates/orator/helpers/: env_select.py
generators/activerecord/templates/orator/models/: __init__.py  entry.py
generators/activerecord/templates/peewee/: db.py  loaders.py
generators/activerecord/templates/peewee/models/: book.py  stat.py
generators/activerecord/templates/peewee/tasks/: stat.py
generators/app/: index.js
generators/app/templates/: .gitignore  .ytl.yml  README.md  ecosystem.config.js  main.py  package.json  pyproject.toml  requirements.txt
generators/app/templates/config/: schedule.rb
generators/app/templates/docs/: entities.md
generators/logs/: index.js
generators/model/: index.js
generators/model/templates/: model.py
generators/model/templates/peewee/: model.py
generators/pipelines/: index.js
generators/pipelines/templates/: pipelines.sample.md  pipelines.sample.py
generators/scrapy/: index.js
generators/spider/: index.js
generators/spider/templates/: spider.py
generators/spider/templates/orator/: spider.py
generators/spmodel/: index.js
src/: centos-install.md  curl-install.md  nvm-install.md
