[tool.poetry]
name = "<%= project_name %>"
version = "0.1.0"
description = "<%= description %>"
authors = ["feizheng <1290657123@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
orator = "^0.9.9"
mysqlclient = "^2.1.0"
jsw-nx = "^1.0.37"
Scrapy = "^2.5.1"
pydash = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
