[tool.poetry]
name = "<%= project_name %>"
version = "0.1.0"
description = "<%= description %>"
authors = ["afeiship <1290657123@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# orator = "^0.9.9"
mysqlclient = "^2.1.0"
jsw-nx = "^1.0.92"
Scrapy = "^2.7.0"
jsw-scrapy = "^1.0.2"
peewee = "^3.15.4"

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.source]
# name = "douban"
# url = "https://pypi.doubanio.com/simple/"
